kubernets-ingress/deployment-develop.yml
apiVersion: v1
kind: Namespace
metadata:
  name: develop

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-develop
  namespace: develop 

spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-develop
  template:
    metadata:
      labels:
        app: frontend-develop
    spec:
      containers:
      - name: front-develop # nome do container
        image: nginx
        ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service-dev
  namespace: develop
spec:
  selector:
    app: frontend-develop
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-primario-develop
  namespace: develop
spec:
  ingressClassName: nginx
  rules:
  - host: develop.<IP>.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-dev
            port:
              number: 80
